objects/Resource__c.object
<CustomObject><fields>
        <fullName>Battle_Station__c</fullName>
        <label>Battle Station</label>
        <referenceTo>Battle_Station__c</referenceTo>
        <relationshipLabel>Resources</relationshipLabel>
        <relationshipName>Resources</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Utilization__c</fullName>
        <label>Utilization</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Resource</label><nameField>
        <label>Resource Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Resources</pluralLabel><sharingModel>ControlledByParent</sharingModel><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews><validationRules>
        <fullName>Inspectors_Must_Work_Overtime</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Name = "Exhaust Port Inspector", Utilization__c &lt; 1.5)</errorConditionFormula>
        <errorDisplayField>Utilization__c</errorDisplayField>
        <errorMessage>Exhaust Port Inspectors must work at least 150%. No coffee breaks!</errorMessage>
    </validationRules></CustomObject>